gap fixed

--- a/test-task/src/components/StickyTourInfo/StickyTourInfo.module.scss
+++ b/test-task/src/components/StickyTourInfo/StickyTourInfo.module.scss
@@ -48,7 +48,7 @@
   .calendar {
     padding: 4px 0;
     display: flex;
-    gap: 8px;
+    gap: 7.2px;
     align-items: center;
   }
 
